# simDB

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
data/: em.idx  em.schema
include/: Executer.h  Parser.h
src/: Executer.cpp  Parser.cpp  Storage.cpp  Storage.h  main.cpp
tests/: ManualTest.txt  StorageTest.cpp
